Changing background colour to ywllo
Checking if this colour is good, but most likely will be too bright

--- a/css/screen.css
+++ b/css/screen.css
@@ -204,6 +204,13 @@ label {
 
 /* ===== LAYOUT STYLES ====== */
 
+body {
+  background-color: yellow;
+}
+
+
 
 /* ===== STATE STYLES ======= */
+
+
 
