Form is now aligned to the centre

--- a/css/screen.css
+++ b/css/screen.css
@@ -202,6 +202,13 @@ label {
   display: block;
 }
 
+/* body alighment */
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* ===== LAYOUT STYLES ====== */
 
 /* background styling */
