--- a/css/screen.css
+++ b/css/screen.css
@@ -218,11 +218,13 @@ body {
 
 /* background styling */
 body {
+  font-family: 'Major Mono Display', monospace;
   background-color: #191a1b;
 }
 
 /* text colour */
 h1, p {
+  font-family: 'Major Mono Display', monospace;
   color: #cccbc0;
 }
 
