--- a/css/screen.css
+++ b/css/screen.css
@@ -228,11 +228,16 @@ h1, p {
   color: #cccbc0;
 }
 
+/* font size and padding for h1 */
+h1 {
+  font-size: 1.5rem;
+  margin-bottom: 2.5rem; 
+}
+
 /* padding for p */
 p {
   margin-bottom: 2.5rem; 
 }
-
 
 
 /* form styling */
@@ -252,10 +257,17 @@ label {
   color: #cccbc0;
 }
 
-/* button styling */
+/* submit button styling */
 input[type="submit"] {
   color: #414642;
   font-family: 'Major Mono Display', monospace;
+}
+
+/* email styling */
+input[type="email"] {
+  color: #414642;
+  font-family: 'Major Mono Display', monospace;
+  margin-bottom: 1.5rem;
 }
 
 /* styling for email text field and subscribe button */
@@ -266,8 +278,17 @@ input[type="submit"] {
   font-size: 1em;
   width: 100%;
   padding: 0.5em;
+  cursor: pointer;
 }
 
+input[type="checkbox"] {
+  width: 1rem;  
+  height: 1rem;
+  accent-color: #e2b714;
+  margin-bottom: 1.5rem;
+  cursor: pointer;
+  vertical-align: middle;
+}
 
 
 /* ===== STATE STYLES ======= */
