--- a/css/screen.css
+++ b/css/screen.css
@@ -212,6 +212,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;  /* content stacks vertically */
+  min-height: 100vh;  /* Takes up full height */
 }
 
 html, body {
